# cougaar-message-router

MessageRouterLib/: MessageRouterLib.jpx
WinMessageRouter/: ClientConnection.cs  ConnectionRegistry.cs  Context.cs  EavesDropRegistry.cs  ListenerRegistry.cs  LogEntry.cs  Logger.cs  Message.cs  MessageRouter.cs  MessageSender.cs  ServerStats.cs  WinMessageRouter.csproj  WinMessageRouter.sln
WinMessageRouterClient/: Client.jsl  Client.resx  Form1.jsl  WinMessageRouterClient.vjsproj
WinMessageRouterLib/: AsyncMessageReceiverListener.jsl  Client.java  Message.jsl  MessageException.jsl  (+6 more)
cppmessagerouter/messageserver/: ClientSocket.cpp  ClientSocket.h  Makefile  Makefile.am  Makefile.in  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  clientconnection.cpp  clientconnection.h  clientconnectionfactory.cpp  clientconnectionfactory.h  clientconnectionmonitor.cpp  clientconnectionmonitor.h  connectionregistry.cpp  connectionregistry.h  connectionvalidator.cpp  connectionvalidator.h  context.cpp  context.h  eavesdropregistry.cpp  eavesdropregistry.h  listenerregistry.cpp  listenerregistry.h  lock.cpp  lock.h  logentry.cpp  logentry.h  logger.cpp  logger.h  main.cpp  message.cpp  message.h  messagesender.cpp  messagesender.h  serverstats.cpp  serverstats.h
cppmessagerouter/messageserver/.deps/: ClientSocket.Po  ServerSocket.Po  Socket.Po  clientconnection.Po  connectionregistry.Po  context.Po  main.Po  message.Po  messagesender.Po
cppmessagerouter/messageserver/docs/: Makefile  Makefile.in
cppmessagerouter/messageserver/docs/en/: Makefile  Makefile.in
(+38 files in other folders)
